bugfix - inccrease visibility of parent class properties

--- a/scss/components/_pagination.scss
+++ b/scss/components/_pagination.scss
@@ -12,6 +12,10 @@
 	}
 } //*/
 
+ul.pagination > li {
+	border-radius: 15px;
+}
+
 
 //.pagination {
 ////	& li {
